<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.borislav.amazonwebservicesdemoapp.LandindgActivity">


    <LinearLayout
        android:id="@+id/amazon_services_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/cognito"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/amazon_cognito" />

        <Button
            android:id="@+id/dynamo_db"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/mobile_analytics" />

        <Button
            android:id="@+id/kinesis"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/dynamo_db" />

        <Button
            android:id="@+id/lambda"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/amazon_kinesis" />

        <Button
            android:id="@+id/analytics"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/amazon_lambda" />

    </LinearLayout>



</RelativeLayout>
